Project

General

Profile

Actions

Bug #41432

closed

mgr: 'PyInt_Check' was not declared in this scope

Added by Ernesto Puerta over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
ceph-mgr
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When building (make vstart) from master (v15.0.0-4322-g20bebe242b) on a Fedora 29 containerized environment, the following error appears:

[ 84%] Building CXX object src/mgr/CMakeFiles/ceph-mgr.dir/BaseMgrModule.cc.o
/ceph/src/mgr/BaseMgrModule.cc: In function 'PyObject* ceph_set_health_checks(BaseMgrModule*, PyObject*)':
/ceph/src/mgr/BaseMgrModule.cc:308:13: error: 'PyInt_Check' was not declared in this scope
  } else if (PyInt_Check(v)) {
             ^~~~~~~~~~~
/ceph/src/mgr/BaseMgrModule.cc:308:13: note: suggested alternative: 'PySet_Check'
  } else if (PyInt_Check(v)) {
             ^~~~~~~~~~~
             PySet_Check
make[3]: *** [src/mgr/CMakeFiles/ceph-mgr.dir/build.make:115: src/mgr/CMakeFiles/ceph-mgr.dir/BaseMgrModule.cc.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:4461: src/mgr/CMakeFiles/ceph-mgr.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....

Other calls to PyInt_Check are properly guarded by ifdefs, so this seems to be an issue introduced by commit 69a712ad4bf48eb81a503e14d9957b1186ed35f5. Fix is trivial.

Actions #1

Updated by Ernesto Puerta over 4 years ago

  • Pull request ID set to 29895
Actions #2

Updated by Ernesto Puerta over 4 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Kefu Chai over 4 years ago

  • Assignee changed from Ernesto Puerta to Kefu Chai
  • Pull request ID changed from 29895 to 29831
Actions #4

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF