mgr: add guards to PyInt_Check

Introduced by 69a712ad4bf48eb81a503e14d9957b1186ed35f5

Fixes: https://tracker.ceph.com/issues/41432
Signed-off-by: Ernesto Puerta <epuertat@redhat.com>